--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.2",
     "serve": "^14.2.4"
   },
   "devDependencies": {
